@startuml
class "FromUsernamesFilter`1"<T> {
    <<internal>> FromUsernamesFilter(usernameSelector:Func<T, string?>, usernames:string[])
    + <<override>> TheyShellPass(_:IUpdater, input:T) : bool
}
class FromUsernamesFilter <<static>> {
    + {static} Messages(usernames:string[]) : Filter<Message>
    + {static} CallbackQueries(usernames:string[]) : Filter<CallbackQuery>
    + {static} InlineQueries(usernames:string[]) : Filter<InlineQuery>
}
class "Filter`1"<T> {
}
class "Func`2"<T1,T2> {
}
"Filter`1" "<T>" <|-- "FromUsernamesFilter`1"
"FromUsernamesFilter`1" --> "_usernameSelector<T,string?>" "Func`2"
@enduml
